--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,14 @@
+FROM maven:3.9.4-eclipse-temurin-17 AS exception-handler-starter-build
+WORKDIR /app
+COPY /exception-handler-starter/pom.xml pom.xml
+COPY /exception-handler-starter/src src
+RUN mvn clean install -DskipTests
+
 FROM maven:3.9.4-eclipse-temurin-17 AS build
 
 ARG SERVICE_NAME
 
+COPY --from=exception-handler-starter-build /root/.m2 /root/.m2
 COPY ${SERVICE_NAME}/pom.xml pom.xml
 COPY ${SERVICE_NAME}/src src
 
