--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -31,6 +31,7 @@
         <springdoc.version>2.5.0</springdoc.version>
         <spring-cloud.version>2023.0.3</spring-cloud.version>
         <keycloak.version>26.0.0</keycloak.version>
+        <exception.handler.version>1.0-SNAPSHOT</exception.handler.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -100,6 +101,11 @@
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-authz-client</artifactId>
             <version>${keycloak.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>cab.aggregator.app</groupId>
+            <artifactId>exception-handler-starter</artifactId>
+            <version>${exception.handler.version}</version>
         </dependency>
     </dependencies>
 
