--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,13 @@
   <groupId>cab.aggregator.app</groupId>
   <artifactId>cab.aggregator.app</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>pom</packaging>
 
   <name>cab.aggregator.app</name>
   <url>http://maven.apache.org</url>
+  <modules>
+    <module>exception-handler-starter</module>
+  </modules>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
