--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,11 +4,18 @@ COPY /exception-handler-starter/pom.xml pom.xml
 COPY /exception-handler-starter/src src
 RUN mvn clean install -DskipTests
 
+FROM maven:3.9.4-eclipse-temurin-17 AS logging-starter-build
+WORKDIR /app
+COPY /logging-starter/pom.xml pom.xml
+COPY /logging-starter/src src
+RUN mvn clean install -DskipTests
+
 FROM maven:3.9.4-eclipse-temurin-17 AS build
 
 ARG SERVICE_NAME
 
 COPY --from=exception-handler-starter-build /root/.m2 /root/.m2
+COPY --from=logging-starter-build /root/.m2 /root/.m2
 COPY ${SERVICE_NAME}/pom.xml pom.xml
 COPY ${SERVICE_NAME}/src src
 
