--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -29,7 +29,7 @@ management:
         enabled: true
   zipkin:
     tracing:
-      endpoint: ${ZIPKIN:http://zipkin:9411/api/v2/spans}
+      endpoint: ${ZIPKIN:http://localhost:9411/api/v2/spans}
   tracing:
     sampling:
       probability: 1.0
