--- a/discovery-service/src/main/resources/application.properties
+++ b/discovery-service/src/main/resources/application.properties
@@ -6,5 +6,5 @@ eureka.instance.metadata-map.metrics.path=/actuator/prometheus
 
 management.endpoints.web.exposure.include=health,prometheus
 management.prometheus.metrics.export.enabled=true
-management.zipkin.tracing.endpoint=${ZIPKIN}
+management.zipkin.tracing.endpoint=${ZIPKIN:http://localhost:9411/api/v2/spans}
 management.tracing.sampling.probability=1.0
