--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <module>passenger-service</module>
     <module>rating-service</module>
     <module>ride-service</module>
+    <module>logging-starter</module>
   </modules>
 
   <properties>
