--- a/rating-service/pom.xml
+++ b/rating-service/pom.xml
@@ -36,6 +36,7 @@
         <spring-cloud.version>2023.0.3</spring-cloud.version>
         <cucumber.version>7.11.0</cucumber.version>
         <exception.handler.version>1.0-SNAPSHOT</exception.handler.version>
+        <logging.version>1.0-SNAPSHOT</logging.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -208,6 +209,11 @@
             <groupId>cab.aggregator.app</groupId>
             <artifactId>exception-handler-starter</artifactId>
             <version>${exception.handler.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>cab.aggregator.app</groupId>
+            <artifactId>logging-starter</artifactId>
+            <version>${logging.version}</version>
         </dependency>
     </dependencies>
 
