--- a/docker/.env
+++ b/docker/.env
@@ -22,3 +22,6 @@ KEYCLOAK_ADMIN_CLIENT_URL="http://keycloak:7000"
 CLIENT_ID_FOR_AUTH_KC="cab-aggregator-app"
 KC_REALM="cab-aggregator-app"
 JWT_ISSUER_URL=http://keycloak:7000/realms/cab-aggregator-app
+
+REDIS_URL="redis"
+REDIS_PORT=6379
