--- a/ride-service/pom.xml
+++ b/ride-service/pom.xml
@@ -206,6 +206,10 @@
             <artifactId>logging-starter</artifactId>
             <version>${logging.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
