--- a/ride-service/src/main/resources/application.properties
+++ b/ride-service/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.cloud.discovery.enabled=true
 spring.cloud.config.discovery.service-id=config-server
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.fail-fast=true
+
+spring.cache.type=redis
+spring.cache.redis.time-to-live=60000
+spring.data.redis.host=${REDIS_URL:localhost}
+spring.data.redis.port=${REDIS_PORT:6379}
