--- a/docker/monitoring/logstash/logstash.conf
+++ b/docker/monitoring/logstash/logstash.conf
@@ -1,13 +1,13 @@
 input {
-   beats{
-   port => 5044
-   }
+  tcp{
+	port => 5000
+	codec => json
+  }
 }
-filter {
-}
+
 output {
-   elasticsearch {
-   hosts => "http://elasticsearch:9200"
-   index => "logs-%{+YYYY.MM.DD}"
- }
+  elasticsearch {
+    hosts => "elasticsearch:9200"
+    index => "logs-%{+YYYY.MM.DD}"
+  }
 }
