--- a/passenger-service/pom.xml
+++ b/passenger-service/pom.xml
@@ -35,6 +35,7 @@
         <keycloak.version>26.0.0</keycloak.version>
         <exception.handler.version>1.0-SNAPSHOT</exception.handler.version>
         <logging.version>1.0-SNAPSHOT</logging.version>
+        <logback.encoder.version>8.0</logback.encoder.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -209,6 +210,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>${logback.encoder.version}</version>
         </dependency>
     </dependencies>
 
